# DecisionTreeAnalyzer

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requests.txt  requirements.txt
data/: iris.json
src/app/controller/: __init__.py  application_controller.py
src/app/ui/: main_window.py
src/app/ui/resources/: styles.qss
src/app/ui/widgets/: __init__.py  dataset_info_view.py  file_selector.py  metrics_view.py  tree_view.py
src/core/analysis/: __init__.py  data_analyzer.py
src/core/data_loading/: __init__.py  data_loader.py
src/core/decision_tree/: __init__.py  decision_tree_builder.py
src/core/evaluation/: __init__.py  quality_evaluator.py
src/core/prediction/: __init__.py  predictor.py
src/core/preprocessing/: __init__.py  data_preprocessor.py
src/core/visualization/: __init__.py  visualizer.py
src/domain/: __init__.py  dataset.py  dataset_info.py  decision_tree_model.py  evaluation_metrics.py  prediction_result.py  processed_dataset.py  visualization_data.py
src/dt_analytics/: __init__.py  main.py
src/dt_analytics/application/: __init__.py
src/dt_analytics/application/dto/: __init__.py  dataset_dto.py  experiment_dto.py  ml_experiment_dto.py  project_dto.py
src/dt_analytics/application/mappers/: __init__.py  ml_mapper.py
src/dt_analytics/bootstrap/: __init__.py  app_factory.py  container.py  runtime.py
src/dt_analytics/config/: __init__.py  defaults.py  schemas.py  settings.py
src/dt_analytics/domain/: __init__.py
src/dt_analytics/presentation/: __init__.py
src/dt_analytics/shared/: __init__.py  constants.py  exceptions.py  result.py  types.py
src/infrastructure/file_system/: __init__.py  base_reader.py  csv_reader.py  excel_reader.py  file_format_detector.py  json_reader.py
src/infrastructure/plotting/: __init__.py  tree_plotter.py
tests/: test_data_analyzer.py  test_data_loader.py  test_predictor.py  test_preprocessor.py  test_quality_evaluator.py  test_tree_builder.py  test_visualizer.py
(+102 files in other folders)
