[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dt-analytics"
version = "0.1.0"
description = "Настольная информационная система для анализа данных с использованием методов деревьев решений."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "m4gomedov" }
]
keywords = [
  "desktop",
  "qt",
  "pyside6",
  "data-analysis",
  "decision-tree",
  "scikit-learn"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: User Interfaces"
]
dependencies = [
  "PySide6>=6.7",
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.5",
  "matplotlib>=3.8",
  "joblib>=1.4",
  "openpyxl>=3.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-qt>=4.4",
  "ruff>=0.5",
  "black>=24.0",
  "mypy>=1.10"
]

[project.scripts]
dt-analytics = "dt_analytics.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
  "gui: GUI tests",
  "integration: integration tests",
  "slow: slow tests"
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "N",
  "B",
  "UP",
  "C4",
  "SIM"
]
ignore = []

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["dt_analytics"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
pretty = true
